(chore) app/pages/options.html: change swichport template form label

--- a/app/pages/options.html
+++ b/app/pages/options.html
@@ -27,7 +27,7 @@
         name="switchportTemplate"
         class="switchport-template-form"
     >
-        <label>Switchport template</label>
+        <label>Switchport template (FW >= 3.4 only)</label>
         <textarea
             rows="30"
             name="switchportTemplate"
