(fix) uiExtension/pointToPointTunnels: remove unavailable tunnel types, fix template l10n

--- a/app/pages/ui/point-to-point-tunnels/point-to-point-tunnels-editor.html
+++ b/app/pages/ui/point-to-point-tunnels/point-to-point-tunnels-editor.html
@@ -122,7 +122,7 @@
                         >
                             <ndm-checkbox
                                 name="tunnelSourceIsInterface"
-                                label="Tunnel source is interface"
+                                label="{{vm.l10n.ipsecTunnelSourceIsInterface}}"
                                 model="vm.model.ipsec.tunnelSourceIsInterface"
                             >
                             </ndm-checkbox>
