(chore) package.json: add 'toaster-js' dependency & webpack sass loader

--- a/app/pages/options.html
+++ b/app/pages/options.html
@@ -158,6 +158,19 @@
         </textarea>
         </details>
     </form>
+
+    <br/>
+    <br/>
+    <br/>
+    <div class="buttons-row">
+        <button
+            id="clearStorage"
+            type="button"
+            class="button button--red button-wide"
+        >
+            Clear extension storage
+        </button>
+    </div>
 </div>
 </body>
 
