--- a/app/pages/options.html
+++ b/app/pages/options.html
@@ -64,8 +64,8 @@
         <h3>Switchport template editor (FW >= 3.4 only)</h3>
 
         <p class="switchports-template__info-notice">
-            MT7628-based devices with built-in switch have no port statistics,
-            therefore the 'Transmitted bytes', 'Received bytes', 'TX errors' & 'RX errors' properties
+            MT7628-based devices with built-in switch have limited port statistics,
+            so the 'Transmitted bytes', 'Received bytes', 'TX errors' & 'RX errors' properties
             will always be empty for these devices.
         </p>
 
