--- a/app/pages/ui/point-to-point-tunnels/point-to-point-tunnels-section.html
+++ b/app/pages/ui/point-to-point-tunnels/point-to-point-tunnels-section.html
@@ -17,7 +17,7 @@
         track-by-prop="id"
         sort-name="description"
         sort-reverse="false"
-        is-sortable="false"
+        is-sortable="true"
         click-on-row="vm.editTunnel"
     >
     </ndm-table>
